# taxonomy-builder

./: .gitignore  CLAUDE.md  Caddyfile  PLAN.md  PRD.md  REQUIREMENTS.md  docker-compose.fef.yml  docker-compose.proxy.yml  docker-compose.yml  esea-vocab.ttl  init-test-db.sql
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.blob-storage/: index.json
backend/.blob-storage/019c74c8-f8db-7514-93d6-35c7f35305ec/: index.json
backend/alembic/: env.py
backend/alembic/versions/: 012b88130906_add_feedback_table.py  070a1040097e_added_resolution_fields_to_comment_model.py  07616af9e487_add_published_versions_table.py  07791d38a3da_pre_release_version_support.py  1029497287bd_add_unique_constraint_on_published_.py  1a6d55762dd6_change_change_events_scheme_id_to_set_.py  1d9116da1d4b_initial_schema.py  22b9882fd86b_merge_heads.py  28243e09efe4_add_property_domain_class_join_table.py  2a66da359e8f_merge_uri_column_and_published_at_heads.py  2baacab5ddc4_merge_heads.py  30932a6be515_add_concept_related.py  3b39b875c37c_remove_publisher_from_concept_schemes.py  3e71deffedbf_add_class_superclass_join_table.py  476b21d7dd14_add_identifier_prefix_and_counter_to_.py  4837a613b04f_add_uri_column_to_ontology_classes_and_.py  505552e0c1e1_add_project_id_to_change_events.py  5890c2d4e19b_add_namespace_prefixes_to_projects.py  5a1c3e7f9b2d_make_property_domain_class_nullable.py  6701f9190cd7_add_parent_comment_id_for_threading.py  6f1b1b748eb1_add_comments_table.py  6fb4ab977cfe_add_range_class_id_to_properties.py  70a40f327144_add_ontology_classes_table.py  7e9830fce9b3_added_resolution_fields_to_comment_model.py  80b6ab36ba8d_add_property_type_column.py  8450dd944042_merge_heads.py  848fa99ec415_drop_domain_class_scalar_from_properties.py  86d7baaf2296_add_class_restriction_table_and_concept_.py  (+22 more)
backend/tests/: conftest.py  factories.py  test_blob_store.py  test_concept_api.py  test_concept_scheme_api.py  test_concept_scheme_service.py  test_concept_service.py  test_health.py  test_integration.py  test_main.py  test_seed.py  test_taxonomy_api.py  test_taxonomy_service.py
(+556 files in other folders)
